[tool.poetry]
name = "valve-hack"
version = "0.1.0"
description = ""
authors = ["Bob Steers <steers.bob@gmail.com>"]
license = "GPL-v3"

[tool.poetry.dependencies]
python = "^3.7"
paho-mqtt = "^1.5.1"
pyserial = "^3.5"

[tool.poetry.dev-dependencies]
flake8 = "^3.8.4"
autopep8 = "^1.5.4"
flake8-quotes = "^3.2.0"
pytest = "^6.1.2"
pytest-flake8 = "^1.0.6"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
